--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.HERE"
         tools:targetApi="31">
         <activity
+            android:name=".ClassPage1"
+            android:exported="false" />
+        <activity
+            android:name=".ClassList"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
