--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'com.cs407.here'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.cs407.here"
@@ -36,4 +36,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
 }
