--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.HERE"
         tools:targetApi="31">
         <activity
+            android:name=".GoogleSignIn"
+            android:exported="false" />
+        <activity
             android:name=".Absent"
             android:exported="false" />
         <activity
